@@ -1,117 +1,171 @@
 package com.healthcare.mvp.config;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.healthcare.mvp.shared.dto.BaseResponse;
 import com.healthcare.mvp.shared.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 
+/**
+ * ENHANCED Security configuration with proper JWT authentication and method-level authorization
+ *
+ * This configuration provides:
+ * - JWT-based authentication
+ * - Method-level security with @PreAuthorize
+ * - Proper CORS configuration
+ * - Custom authentication and authorization error handling
+ * - Token blocklist support (future enhancement)
+ */
 @Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final UserDetailsService userDetailsService;
-    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final OncePerRequestFilter securityHeadersFilter;
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(12); // Higher strength for healthcare data
-    }
-
-    @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
+    private final ObjectMapper objectMapper;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        return http
             .csrf(csrf -> csrf.disable())
-            .exceptionHandling(exception ->
-                exception.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-            .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .headers(headers -> headers
-                .frameOptions().deny()
-                .contentTypeOptions().and()
-                .xssProtection().and()
-                .referrerPolicy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)
-                .httpStrictTransportSecurity(hstsConfig -> hstsConfig
-                    .maxAgeInSeconds(31536000)
-                    .includeSubdomains(true)))
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+            // Configure authorization rules
             .authorizeHttpRequests(auth -> auth
-                // Public endpoints
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/public/**").permitAll()
-                .requestMatchers("/actuator/health").permitAll()
+                // Public endpoints - No authentication required
+                .requestMatchers(
+                    "/api/auth/login",
+                    "/api/auth/refresh",
+                    "/api/auth/health",
+                    "/api/auth/register",
+                    "/api/auth/registration/**",
+                    "/api/auth/reset-password",
+                    "/api/auth/confirm-reset",
+                    "/api/business/super-admin/initialize",
+                    "/api/debug/**",
+                    "/actuator/**",
+                    "/swagger-ui/**",
+                    "/swagger-ui.html",
+                    "/v3/api-docs/**",
+                    "/swagger-resources/**",
+                    "/webjars/**",
+                    "/error"
+                ).permitAll()
 
-                // Super Admin only
-                .requestMatchers("/api/super-admin/**").hasRole("SUPER_ADMIN")
+                // Admin-only endpoints
+                .requestMatchers("/api/admin/**").hasRole("SUPER_ADMIN")
 
-                // Hospital Admin endpoints
-                .requestMatchers("/api/hospitals/**").hasAnyRole("SUPER_ADMIN", "HOSPITAL_ADMIN")
+                // Business endpoints
+                .requestMatchers("/api/business/**").hasAnyRole("SUPER_ADMIN", "TECH_ADVISOR")
 
-                // Doctor endpoints
-                .requestMatchers("/api/doctors/**").hasAnyRole("SUPER_ADMIN", "HOSPITAL_ADMIN", "DOCTOR")
+                // Hospital endpoints
+                .requestMatchers("/api/hospitals/**").hasAnyRole("SUPER_ADMIN", "TECH_ADVISOR", "HOSPITAL_ADMIN")
 
-                // Patient endpoints
-                .requestMatchers("/api/patients/**").hasAnyRole("SUPER_ADMIN", "HOSPITAL_ADMIN", "DOCTOR", "NURSE", "RECEPTIONIST")
+                // Medical endpoints
+                .requestMatchers("/api/patients/**", "/api/appointments/**", "/api/medical-records/**")
+                    .hasAnyRole("HOSPITAL_ADMIN", "DOCTOR", "NURSE", "RECEPTIONIST", "PATIENT")
 
-                // Appointment endpoints
-                .requestMatchers("/api/appointments/**").hasAnyRole("SUPER_ADMIN", "HOSPITAL_ADMIN", "DOCTOR", "NURSE", "RECEPTIONIST", "PATIENT")
+                // Billing endpoints
+                .requestMatchers("/api/billing/**").hasAnyRole("HOSPITAL_ADMIN", "BILLING_STAFF", "RECEPTIONIST")
 
-                // All other requests require authentication
-                .anyRequest().authenticated());
+                // Doctor management endpoints
+                .requestMatchers("/api/doctors/**").hasAnyRole("HOSPITAL_ADMIN", "DOCTOR", "NURSE", "RECEPTIONIST")
 
-        http.authenticationProvider(authenticationProvider());
-        http.addFilterBefore(securityHeadersFilter, UsernamePasswordAuthenticationFilter.class);
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // Prescription endpoints
+                .requestMatchers("/api/prescriptions/**").hasAnyRole("DOCTOR", "HOSPITAL_ADMIN", "PATIENT")
 
-        return http.build();
+                // User profile endpoints
+                .requestMatchers("/api/users/**").authenticated()
+
+                // Dashboard endpoints
+                .requestMatchers("/api/dashboard/**").authenticated()
+
+                // All other requests need authentication
+                .anyRequest().authenticated()
+            )
+
+            // Custom exception handling
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint((request, response, authException) -> {
+                    response.setStatus(HttpStatus.UNAUTHORIZED.value());
+                    response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+
+                    BaseResponse<Object> errorResponse = BaseResponse.builder()
+                            .success(false)
+                            .errorCode("AUTHENTICATION_REQUIRED")
+                            .message("Authentication required to access this resource")
+                            .timestamp(LocalDateTime.now())
+                            .path(request.getRequestURI())
+                            .build();
+
+                    response.getWriter().write(objectMapper.writeValueAsString(errorResponse));
+                })
+                .accessDeniedHandler((request, response, accessDeniedException) -> {
+                    response.setStatus(HttpStatus.FORBIDDEN.value());
+                    response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+
+                    BaseResponse<Object> errorResponse = BaseResponse.builder()
+                            .success(false)
+                            .errorCode("ACCESS_DENIED")
+                            .message("You don't have permission to access this resource")
+                            .timestamp(LocalDateTime.now())
+                            .path(request.getRequestURI())
+                            .build();
+
+                    response.getWriter().write(objectMapper.writeValueAsString(errorResponse));
+                })
+            )
+
+            // Add JWT authentication filter
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+            .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:*", "https://*.yourdomain.com"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // Allow all origins for development - CHANGE FOR PRODUCTION
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12);
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 }
